--- a/main.ipynb
+++ b/main.ipynb
@@ -565,7 +565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -747,7 +747,7 @@
         "    imgs = []\n",
         "    plotter = pv.Plotter(off_screen=True)\n",
         "    if SAVE_GIF:\n",
-        "        plotter.open_gif('optimize_rotations.gif')\n",
+        "        plotter.open_gif('gifs/optimize_rotations.gif')\n",
         "\n",
         "    initial_rotation_field = calculate_initial_rotation_field(tet, MAX_OVERHANG, ROTATION_MULTIPLIER, STEEP_OVERHANG_COMPENSATION, INITIAL_ROTATION_FIELD_SMOOTHING, SET_INITIAL_ROTATION_TO_ZERO, MAX_POS_ROTATION, MAX_NEG_ROTATION)\n",
         "    num_cells_with_initial_rotation = np.sum(~np.isnan(initial_rotation_field))\n",
@@ -922,7 +922,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1033,7 +1033,7 @@
         "    plotter.camera_position = \"xz\"\n",
         "\n",
         "    # run dijkstra's algorithm and visualize\n",
-        "    plotter.open_gif('dijkstra.gif')\n",
+        "    plotter.open_gif('gifs/dijkstra.gif')\n",
         "    distances, paths = nx.single_source_dijkstra(cell_neighbour_graph, cell_index)\n",
         "    dijkstra_actors = []\n",
         "    for i in np.arange(0, tet.cell_data['cell_distance_to_bottom'][cell_index], 0.2):\n",
@@ -1072,7 +1072,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2112,7 +2112,7 @@
         "    plotter = pv.Plotter(off_screen=True)\n",
         "\n",
         "    if SAVE_GIF:\n",
-        "        plotter.open_gif('calculate_deformation.gif')\n",
+        "        plotter.open_gif('gifs/calculate_deformation.gif')\n",
         "\n",
         "    def save_gif(new_vertices):\n",
         "        global save_gif_i\n",
