--- a/main.ipynb
+++ b/main.ipynb
@@ -3,6 +3,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# only necessary for google colab! to load models into session\n",
+        "!git clone https://github.com/jyjblrd/S4_Slicer\n",
+        "!mv S4_Slicer/ ./"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
