--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# only necessary for google colab! to load models into session\n",
         "!git clone https://github.com/jyjblrd/S4_Slicer\n",
-        "!mv S4_Slicer/ ./"
+        "!mv S4_Slicer/* ./"
       ]
     },
     {
